// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shapshot 1`] = `
<div
  className="log-cell string"
  onClick={[Function]}
  onContextMenu={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CellValue
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "conn",
      }
    }
  />
</div>
`;

exports[`shapshot after clicking 1`] = `
<div
  className="log-cell string"
  onClick={[Function]}
  onContextMenu={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CellValue
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "conn",
      }
    }
  />
</div>
`;

exports[`shapshot after hovering 1`] = `
<div
  className="log-cell string hover"
  onClick={[Function]}
  onContextMenu={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CellValue
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "conn",
      }
    }
  />
  <Tooltip
    style={
      Object {
        "left": 100,
        "top": 79,
      }
    }
  >
    <span
      className="field-name"
    >
      _path
    </span>
  </Tooltip>
</div>
`;

exports[`shapshot after hovering 2`] = `
<div
  className="log-cell string"
  onClick={[Function]}
  onContextMenu={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CellValue
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "conn",
      }
    }
  />
</div>
`;

exports[`shapshot after right-clicking 1`] = `
<div
  className="log-cell string active hover"
  onClick={[Function]}
  onContextMenu={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CellValue
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "conn",
      }
    }
  />
  <Tooltip
    style={Object {}}
  >
    <span
      className="field-name"
    >
      _path
    </span>
  </Tooltip>
</div>
`;

exports[`shapshot right clicking a time cell 1`] = `
<div
  className="log-cell time active hover"
  onClick={[Function]}
  onContextMenu={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CellValue
    field={
      TimeField {
        "name": "ts",
        "type": "time",
        "value": "1425612054.369843",
      }
    }
  />
  <Tooltip
    style={Object {}}
  >
    <span
      className="field-name"
    >
      ts
    </span>
  </Tooltip>
</div>
`;
